--- a/tea-manager-dao/pom.xml
+++ b/tea-manager-dao/pom.xml
@@ -44,5 +44,27 @@
             <artifactId>druid</artifactId>
         </dependency>
     </dependencies>
-
+    <!-- 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 -->
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/.svn/*</exclude>
+                </excludes>
+                <!--<filtering>false</filtering>-->
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <excludes>
+                    <exclude>**/.svn/*</exclude>
+                </excludes>
+                <includes>
+                    <!--<include>**/*.properties</include>-->
+                    <include>**/*.xml</include>
+                </includes>
+                <!--<filtering>false</filtering>-->
+            </resource>
+        </resources>
+    </build>
 </project>
